tests/snapshots/e2e_test__case_04_staged.snap
---
source: tests/e2e_test.rs
expression: fixture.git_diff_cached_all()
---
diff --git a/zsh.nix b/zsh.nix
index 6f2e06d..110fff0 100644
--- a/zsh.nix
+++ b/zsh.nix
@@ -15 +14,0 @@ line 14
-      enableAutosuggestions = true;
