tests/snapshots/e2e_test__case_05_diff.snap
---
source: tests/e2e_test.rs
expression: "fixture.stager.diff(&[\"gtk.nix\".to_string()]).unwrap()"
---
gtk.nix:
  -10:	    gtk.theme.name = "Adwaita";
  -11:	    gtk.iconTheme.name = "Papirus";
  +10:	    # Theme managed by Stylix
  +11:	    gtk.iconTheme.name = "Papirus-Dark";
  +12:	    gtk.cursorTheme.size = 24;
