tests/snapshots/e2e_test__case_05_initial_diff.snap
---
source: tests/e2e_test.rs
expression: diff
---
diff --git a/gtk.nix b/gtk.nix
index 2ce966d..93d8dbc 100644
--- a/gtk.nix
+++ b/gtk.nix
@@ -10,2 +10,3 @@ line 9
-    gtk.theme.name = "Adwaita";
-    gtk.iconTheme.name = "Papirus";
+    # Theme managed by Stylix
+    gtk.iconTheme.name = "Papirus-Dark";
+    gtk.cursorTheme.size = 24;
