tests/snapshots/e2e_test__case_05_remaining.snap
---
source: tests/e2e_test.rs
expression: remaining
---
diff --git a/gtk.nix b/gtk.nix
index f85e60a..93d8dbc 100644
--- a/gtk.nix
+++ b/gtk.nix
@@ -10,2 +10,2 @@ line 9
-    gtk.theme.name = "Adwaita";
-    gtk.iconTheme.name = "Papirus";
+    # Theme managed by Stylix
+    gtk.iconTheme.name = "Papirus-Dark";
