tests/snapshots/e2e_test__case_05_staged.snap
---
source: tests/e2e_test.rs
expression: fixture.git_diff_cached_all()
---
diff --git a/gtk.nix b/gtk.nix
index 2ce966d..2dc22f9 100644
--- a/gtk.nix
+++ b/gtk.nix
@@ -10,0 +11 @@ line 9
+    gtk.cursorTheme.size = 24;
