tests/snapshots/e2e_test__case_06_flake_staged.snap
---
source: tests/e2e_test.rs
expression: flake_staged
---
diff --git a/flake.nix b/flake.nix
index 989a5c4..bda6664 100644
--- a/flake.nix
+++ b/flake.nix
@@ -136,0 +137 @@ line 136
+      debug = true;
