tests/snapshots/e2e_test__case_06_gtk_staged.snap
---
source: tests/e2e_test.rs
expression: gtk_staged
---
diff --git a/gtk.nix b/gtk.nix
index 9347bee..86b2814 100644
--- a/gtk.nix
+++ b/gtk.nix
@@ -11,0 +12 @@ line 11
+    gtk.cursorTheme.size = 24;
