tests/snapshots/e2e_test__case_06_staged.snap
---
source: tests/e2e_test.rs
expression: fixture.git_diff_cached_all()
---
diff --git a/flake.nix b/flake.nix
index 989a5c4..bda6664 100644
--- a/flake.nix
+++ b/flake.nix
@@ -136,0 +137 @@ line 136
+      debug = true;
diff --git a/gtk.nix b/gtk.nix
index 9347bee..86b2814 100644
--- a/gtk.nix
+++ b/gtk.nix
@@ -11,0 +12 @@ line 11
+    gtk.cursorTheme.size = 24;
