tests/snapshots/e2e_test__case_07_staged.snap
---
source: tests/e2e_test.rs
expression: fixture.git_diff_cached_all()
---
diff --git a/zsh.nix b/zsh.nix
index f92d264..fd7cab8 100644
--- a/zsh.nix
+++ b/zsh.nix
@@ -15,3 +14,0 @@ line 14
-      enableAutosuggestions = true;
-      enableCompletion = true;
-      enableSyntaxHighlighting = true;
